html css js files modified

--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/index.css" />
-    <title>JS starter</title>
+    <title>JS Starter</title>
   </head>
   <body>
+    <h1 class="counter">Counter</h1>
+    <div id="display">0</div>
+
+    <div class="btn-counter">
+      <button type="button" id="decrement">-</button>
+      <button type="button" id="reset">Reset</button>
+      <button type="button" id="increment">+</button>
+    </div>
+
     <script type="module" src="./src/init.js"></script>
   </body>
 </html>
